@@ -1,4 +1,4 @@
-
-    <menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item android:id="@+id/table_last_value" android:title="@string/table_last_values"></item>
-    </menu>
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/table_last_value" android:title="@string/table_last_values"></item>
+</menu>
