@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/find_switch_port" android:enabled="true" android:visible="true" android:title="@string/connection_point_find_switch_port"></item>
     <item android:id="@+id/view_alarms" android:title="@string/view_alarms"></item>
     <item android:title="@string/unmanage" android:id="@+id/unmanage"></item>
