@@ -267,4 +267,6 @@
 	<string name="menu_poll_topology">Topology</string>
 	<string name="menu_poll_interfaces">Interface names</string>
 	<string name="navigate_to">Navigate to</string>
+	
+	<string name="menu_tools">Tools</string>
 </resources>
