@@ -14,6 +14,8 @@
 	- "Zoom to fit" action in network maps
 	- "Always fit layout to screen" option in network maps
 	- Last selected zoom level preserved on network map close
+- Android console:
+    - Implemented feature #776 (WoL)
 - Fixed issues: #690, #693, #725, #752, #756, #758, #765, #766, #767, #768, #769, #770, #771
 
 
